fixed font formatting on mobile

--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@ body {
   color: white;
   background-color: black;
   text-align: center;
-  text-rendering: optimizeLegibility;
-}
+/*  text-rendering: optimizeLegibility;
+*/}
 
 h2 {
   font-weight: 400 !important;
